Added admin template

--- a/src/style/_theme.scss
+++ b/src/style/_theme.scss
@@ -1,20 +1,61 @@
-:root {
-    --nav-height: 2.5rem;
-    --nav-bg-color: #202020;
-    --nav-separator-color: #436260;
-    --nav-bg-item-color: #202020;
-    --nav-item-font-size: 1.5rem;
-    --nav-item-text-color-hover: #ffffff;
-    --nav-item-bg-hover: #436260;
-    --content-bg-color:  #202020;
-    --toolbar-height: 2.5rem;
-    --button-bg-color:#000000;
-    --button-height: 2rem;
-    --button-text-color-hover:#ffffff;
-    --button-bg-color-hover: #778cff;
-    --button-bordrer: #aeafff;
-    --button-bordrer-hover: #ffffff;
-    --admin-panel-bg-color: #000000;
-    --admin-panel-height: 5rem;
-    --color-text: #aeafff;
+.black-theme {
+  --nav-height: 2.5rem;
+  --nav-bg-color: #202020;
+  --nav-separator-color: #436260;
+  --nav-item-color-hover: #000000;
+  --nav-item-font-size: 1.5rem;
+  --nav-item-color: #ffffff;
+  --nav-item-color-active: #7e80ff;
+  --nav-item-bg-hover: #c8ccff;
+  --content-bg-color: #202020;
+  --toolbar-height: 2.5rem;
+  --button-bg-color: #000000;
+  --button-height: 2rem;
+  --button-text-color-hover: #ffffff;
+  --button-bg-color-hover: #b494ff;
+  --button-bordrer: #aeafff;
+  --button-bordrer-hover: #ffffff;
+  --admin-panel-bg-color: #000000;
+  --admin-panel-height: 3rem;
+  --color-text: #aeafff;
+  --table-border: 0.13rem solid rgb(255, 255, 255);
+  --table-bg: #b5baff;
+  --table-th-bg:  hsl(239, 100%, 76%);
+  --table-tr-bg:  rgb(0, 0, 0);
+  --table-tr-nth-even:  #c6d3ff;
+  --article-form-bg: #000000;
+  --article-form-wrap-bg: #1d1d1d;
+  --article-form-wrap-box-shadow: 0px 11px 59px 20px rgba(8, 148, 255, 0.336);
+  --article-form-button-box-shadow: 0 2px 6px rgba(8, 148, 255, 0.336);
+}
+
+.lite-theme {
+  --nav-height: 2.5rem;
+  --nav-bg-color: #e4e4e4;
+  --nav-separator-color: #436260;
+  --nav-item-color-hover: #ffffff;
+  --nav-item-font-size: 1.5rem;
+  --nav-item-color: #a8a8a8;
+  --nav-item-bg-hover: #a1c4c1;
+  --nav-item-color-active: #3a3a3a;
+  --content-bg-color: #ffffff;
+  --toolbar-height: 2.5rem;
+  --button-bg-color: #c0c0c0;
+  --button-height: 2rem;
+  --button-text-color-hover: #ffffff;
+  --button-bg-color-hover: #c0c0c0;
+  --button-bordrer: #999999;
+  --button-bordrer-hover: #ffffff;
+  --admin-panel-bg-color: #cfcfcf;
+  --admin-panel-height: 3rem;
+  --color-text: #000000;
+  --table-border: 0.13rem solid rgb(255, 255, 255);
+  --table-bg: hsl(0, 0%, 81%);
+  --table-th-bg:  hsl(0, 0%, 59%);
+  --table-tr-bg:  rgb(0, 0, 0);
+  --table-tr-nth-even:  hsl(0, 0%, 71%);
+  --article-form-bg: #ffffff;
+  --article-form-wrap-bg:  #fff6f7;
+  --article-form-wrap-box-shadow: 0px 11px 59px 20px rgba(34, 60, 80, 0.3);
+  --article-form-button-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
