--- a/src/style/_theme.scss
+++ b/src/style/_theme.scss
@@ -27,6 +27,9 @@
   --article-form-wrap-bg: #1d1d1d;
   --article-form-wrap-box-shadow: 0px 11px 59px 20px rgba(8, 148, 255, 0.336);
   --article-form-button-box-shadow: 0 2px 6px rgba(8, 148, 255, 0.336);
+  --checkbox-bg-disabled: #202020;
+  --checkbox-checked-bg: #dd34ff;
+  --checkbox-box-shadow: 0 0 3px 3px  #ef9dff;
 }
 
 .lite-theme {
@@ -56,6 +59,9 @@
   --table-tr-nth-even:  hsl(0, 0%, 71%);
   --article-form-bg: #ffffff;
   --article-form-wrap-bg:  #fff6f7;
-  --article-form-wrap-box-shadow: 0px 11px 59px 20px rgba(34, 60, 80, 0.3);
+  --article-form-box-shadow: 0px 11px 59px 16px rgb(214, 214, 214);
   --article-form-button-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  --checkbox-bg-disabled: white;
+  --checkbox-checked-bg: #dd34ff;
+  --checkbox-box-shadow: 0 0 3px 3px  #ef9dff;
 }
